Extend Rooms API
